# Neotron-BMC

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  flake.nix  memory.x  openocd.cfg
.github/workflows/: build.yml  build_and_release.yml  format.yml  release.yml
neotron-bmc-commands/: Cargo.toml  README.md
neotron-bmc-commands/src/: lib.rs
neotron-bmc-nucleo/: Cargo.toml  README.md  build.rs  memory.x
neotron-bmc-nucleo/.cargo/: config.toml
neotron-bmc-nucleo/src/: lib.rs  main.rs  monotonic.rs
neotron-bmc-pico/: Cargo.toml  README.md  build.rs  memory.x  openocd.cfg
neotron-bmc-pico/.cargo/: config.toml
neotron-bmc-pico/src/: lib.rs  main.rs  monotonic.rs  ps2.rs  speaker.rs  spi.rs
neotron-bmc-protocol/: Cargo.toml  README.md
neotron-bmc-protocol/src/: crc.rs  lib.rs
src/: lib.rs  main.rs  monotonic.rs
testsuite/: Cargo.toml
testsuite/src/: lib.rs
testsuite/tests/: test.rs
