[package]
name = "neotron-bmc-protocol"
version = "0.1.0"
edition = "2021"
license = "BlueOak-1.0.0"
repository = "https://github.com/neotron-compute/neotron-bmc"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3"
